--- a/style.css
+++ b/style.css
@@ -2,17 +2,21 @@ body {
 	  background: #CCCCCC
 }
 
-h1 {
-	  text-align: center
+#banner {
+    witdh: 100%;
 }
+
+H1 {
+  text-align: center
+ }
 
 p {
-	  text-align: center
-}
+text-align: center;
+ }
 
-#missao {
-	   font-size: 20px
-}
+ #missao {
+font-size: 20px
+ }
 
 em strong {
 	   color: #FF0000;
